# arkworks-curves

./: Cargo.toml
bls12_381/: Cargo.toml
bls12_381/src/: lib.rs
bls12_381/src/curves/: g1.rs  g1_swu_iso.rs  mod.rs  util.rs  zkllvm.rs
bls12_381/src/fields/: fq.rs  fr.rs  mod.rs
bls12_381/src/fields/zkllvm/: fq.rs  fr.rs  mod.rs
curve25519/: Cargo.toml
curve25519/src/: lib.rs
curve25519/src/curves/: mod.rs  zkllvm.rs
curve25519/src/fields/: fq.rs  fr.rs  mod.rs
curve25519/src/fields/zkllvm/: fq.rs  fr.rs
pallas/: Cargo.toml
pallas/src/: lib.rs
pallas/src/curves/: mod.rs  tests.rs  zkllvm.rs
pallas/src/fields/: fq.rs  fr.rs  mod.rs
pallas/src/fields/zkllvm/: fq.rs  fr.rs
vesta/: Cargo.toml
vesta/src/: lib.rs
vesta/src/fields/: fq.rs  fr.rs
zkllvm_macros/: Cargo.toml
zkllvm_macros/src/: arithmetics.rs  lib.rs
