[package]
name = "ark-bls12-381"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-bls12-381/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { git = "https://github.com/NilFoundation/arkworks-algebra", default-features = false }
ark-ec = { git = "https://github.com/NilFoundation/arkworks-algebra" }
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { git = "https://github.com/NilFoundation/arkworks-algebra", default-features = false }
num-bigint = { version = "0.4", default-features = false, optional = true }
zkllvm-macros = { path = "../zkllvm_macros", optional = true }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
ark-algebra-test-templates = { git = "https://github.com/NilFoundation/arkworks-algebra", default-features = false }
ark-algebra-bench-templates = { git = "https://github.com/NilFoundation/arkworks-algebra", default-features = false }
hex = "^0.4.0"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field" ]
scalar_field = []
zkllvm = [ "dep:zkllvm-macros", "dep:zeroize", "dep:num-bigint" ]

[[bench]]
name = "bls12_381"
path = "benches/bls12_381.rs"
harness = false
